--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,11 +1,18 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset=\"UTF-8\">
-    <title>title og the document</title>
-</head>
-<body>
-My web site espanol
-</body>
+    <head>
+        <meta charset=\"UTF-8\">
+        <title>title og the document</title>
+        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+        <script src="/index.js"></script>
+        <link rel="stylesheet" href="/index.css"/>
+    </head>
+    <body>
+    <h1>My web site</h1>
+        <br>
+        <img src="jaguar.jpg">
+        <br>
+        <button type="button" class="button" onclick="mostrar()">Click me</button>
+    </body>
 </html>
