corrigiendo captura nullpomiter

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -13,6 +13,7 @@
         <br>
         <img src="jaguar.jpg">
         <br>
-        <button type="button" class="button" onclick="mostrar()">Click me</button>
+        <input id="entrada" type="text" name="Compañia" placeholder="Ingrese alerta">
+        <button type="button" class="button" onclick="mostrar($('#entrada').val())">Click me</button>
     </body>
 </html>
