Subiendo html arreglado

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -7,13 +7,19 @@
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
         <script src="/index.js"></script>
         <link rel="stylesheet" href="/index.css"/>
+        <style>
+            body { background-color: #15A571; }
+        </style>
     </head>
     <body>
-    <h1>My web site</h1>
-        <br>
-        <img src="jaguar.jpg">
-        <br>
-        <input id="entrada" type="text" name="Compañia" placeholder="Ingrese alerta">
-        <button type="button" class="button" onclick="mostrar($('#entrada').val())">Click me</button>
+        <center>
+            <h1>El Gran Felino Americano</h1>
+            <br>
+            <input id="entrada" type="text" name="Compañia" placeholder="Ingrese alerta">
+            <button type="button" class="button" onclick="mostrar($('#entrada').val())">Click me</button>
+            <br>
+            <br>
+            <img src="jaguar.jpg">
+        </center>
     </body>
 </html>
